--- a/index.css
+++ b/index.css
@@ -1,30 +1,45 @@
+  html {
+    height: 100%;
+    width: 100%;
+  }
   body {
     /*color: #45BAB8;*/
     font-family: Roboto, sans-serif;
     box-sizing: border-box;
     display: block;
-    background-color: white;
     margin: 0;
-    width: 1920px;
-    height: 969px;
-    color: white;
+    width: 100%;
+    height: 100%;
   }
-  div[id="container Dashboard"] {
+  div[id="container"] {
     box-sizing: border-box;
-    position: fixed;
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    justify-content: flex-start;
+    width: 100%;
+  }
+  nav[id="box Dashboard"] {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     background:#22334d;
-    margin: 0;
-    padding: 0;
     width: 72px;
-    height: 969px;
+    height: 100%;
+    transition-property: all;
+    transition-duration: 1s;
+    transition-delay: 0.1s;
+    overflow: hidden;
+    pointer-events: auto;
+    position: fixed;
+  }
+  nav[id="box Dashboard"]:hover::after {
+    width: 275px;
   }
   div[id="container image"] {
     box-sizing: border-box;
     display: block;
     height: 0px;
-    margin-top: 16px;
     width: 60px;
   }
   img[id="logo simonneau"] {
@@ -107,6 +122,7 @@
     align-self: center;
     box-sizing: border-box;
     display: none;
+    right: 150px;
     flex-basis: 100%;
     flex-grow: 1;
     flex-shrink: 1;
@@ -148,6 +164,7 @@
     flex-shrink: 1;
     height: 19.1875px;
     width: 161px;
+    color: white;
   }
   a[id="login page"] {
     align-items: center;
@@ -182,7 +199,9 @@
     flex-shrink: 1;
     height: 19.1875px;
     width: 161px;
+    color: white;
   }
+  /*
   div[id="container Dashboard"]:hover {
     width: 275px;
   }
@@ -219,6 +238,7 @@
     display: block;
     padding-left: 20px;
   }
+  */
   main[id="body page"] {
     box-sizing: border-box;
     display: block;
@@ -265,7 +285,6 @@
     flex-grow: 1;
     flex-shrink: 1;
     height: 110px;
-    left: 0px;
     margin-bottom: 53.3333px;
     max-width: 100%;
     position: sticky;
