--- a/index.css
+++ b/index.css
@@ -19,6 +19,49 @@
     justify-content: flex-start;
     width: 100%;
   }
+  nav[id="shadow Dashboard"] {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    background:#22334d;
+    width: 275px;
+    height: 100%;
+    transition-property: all;
+    transition-duration: 1s;
+    transition-delay: 0.1s;
+    overflow: hidden;
+    pointer-events: auto;
+    position: fixed;
+    transform: translateX(-203px);
+    -webkit-transform: translateX(-203px);
+    -moz-transform: translateX(-203px);
+    -ms-transform: translateX(-203px);
+    -o-transform: translateX(-203px);
+}
+  div[id="liste text button"] {
+    box-sizing: border-box;
+    display: block;
+    flex-direction: column;
+    align-items: center;
+    height: 171px;
+    width: 201px;
+    margin-top: 150px;
+    margin-left: 72px;
+  }
+  div[id="container text button"] {
+    box-sizing: border-box;
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    padding: 19px;
+    border-bottom: 1px solid;
+    border-bottom-color: white;
+    cursor: pointer;
+  }
+  a[id="text button"] {
+    align-self: center;
+    color: white;
+  }
   nav[id="box Dashboard"] {
     box-sizing: border-box;
     display: flex;
@@ -26,10 +69,6 @@
     background:#22334d;
     width: 72px;
     height: 100%;
-    transition-property: all;
-    transition-duration: 1s;
-    transition-delay: 0.1s;
-    overflow: hidden;
     pointer-events: auto;
     position: fixed;
   }
@@ -201,105 +240,75 @@
     width: 161px;
     color: white;
   }
-  /*
-  div[id="container Dashboard"]:hover {
-    width: 275px;
+  main[id="main box"] {
+    box-sizing: border-box;
+    display: block;
+    position: relative;
+    width: 100%;
+    margin-left: 72px;
+    height: 100%;
+    background-color:white;
+    transition-property: all;
+    transition-duration: 1s;
+    transition-delay: 0.1s;
   }
-  div[id="container Dashboard"]:hover img[id="logo simonneau"]{
-    display: none;
-  }
-  div[id="container Dashboard"]:hover img[id="logo simonneau avec ecriture"]{
+  header[id="header main box"] {
+    box-sizing: border-box;
     display: flex;
-  }
-  div[id="container Dashboard"]:hover a[id="home page"] {
-    justify-content: unset;
-    padding-left: 24px;
-    width: 275px;
-  }
-  div[id="container Dashboard"]:hover div[id="home text"] {
-    display: block;
-    padding-left: 20px;
-  }
-  div[id="container Dashboard"]:hover a[id="compte page"] {
-    justify-content: unset;
-    padding-left: 24px;
-    width: 275px;
-  }
-  div[id="container Dashboard"]:hover div[id="compte text"] {
-    display: block;
-    padding-left: 20px;
-  }
-  div[id="container Dashboard"]:hover a[id="login page"] {
-    justify-content: unset;
-    padding-left: 24px;
-    width: 275px;
-  }
-  div[id="container Dashboard"]:hover div[id="login text"] {
-    display: block;
-    padding-left: 20px;
-  }
-  */
-  main[id="body page"] {
-    box-sizing: border-box;
-    display: block;
-    flex-basis: auto;
-    flex-grow: 1;
-    flex-shrink: 0;
-    height: 969px;
-    max-width: 100%;
-    padding-left: 72px;
-    width: 1848px;
-  }
-  div[id="box body"] {
-    box-sizing: border-box;
-    display: block;
-    flex-basis: auto;
-    flex-grow: 1;
-    flex-shrink: 1;
-    height: 959px;
-    max-width: 100%;
-    position: relative;
-    width: 886px;
-  }
-  div[id="wrap body"] {
-    box-sizing: border-box;
-    display: block;
-    flex-direction: column;
-    height: 959px;
-    min-height: 959px;
-    width: 886px;
-  }
-  div[id="top body"] {
-    box-sizing: border-box;
-    display: block;
-    flex-basis: 0%;
-    flex-grow: 1;
-    flex-shrink: 1;
-    height: 718.953px;
-    width: 886px;
-  }
-  header[id="header top body"] {
-    box-sizing: border-box;
-    display: block;
-    flex-basis: auto;
-    flex-grow: 1;
-    flex-shrink: 1;
-    height: 110px;
-    margin-bottom: 53.3333px;
-    max-width: 100%;
     position: sticky;
-    width: 886px;
-  }
-  div[id="box toolbar"] {
-    align-items: center;
-    box-sizing: border-box;
-    display: block;
+    width: 100%;
     height: 110px;
-    padding-bottom: 4px;
-    padding-left: 16px;
-    padding-right: 16px;
-    padding-top: 4px;
+    background-color: #e8f2f2;
+  }
+  div[id="box header main box"] {
+    box-sizing: border-box;
+    display: flex;
     position: relative;
-    color: #80caca;
-    width: 886px;
+    width: 100%;
+    height: 110px;
+    padding: 10px;
+    align-items: center;
+  }
+  div[id="Title"] {
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    letter-spacing: normal;
+    line-height: 47px;
+    word-break: normal;
+    margin-left: 50px;
+    width: 66%;
+  }
+  div[id="box recherche"] {
+    box-sizing: border-box;
+    display: flex;
+    position: relative;
+    width: 25%;
+    height: 32px;
+    border-bottom: 1px solid;
+    border-bottom-color: black;
+    align-items: center;
+  }
+  input[id="recherche d'operation"] {
+    width: 100%;
+    height: 100%;
+    cursor: text;
+    border-style: hidden;
+    background-color: transparent;
+    border-color: transparent;
+    outline: none;
+  }
+  div[id="box recherche logo"] {
+    box-sizing: border-box;
+    display: flex;
+    position: relative;
+    width: 10%;
+    justify-content: center;
+    padding-left: 13px;
+    padding-bottom: 5px;
+  }
+  img[id="logo search"] {
+    width:24px;
+    height: 24px;
   }
