--- a/views/login.html
+++ b/views/login.html
@@ -6,7 +6,7 @@
 
             <meta charset="UTF-8">
 
-            <title>Login Page</title>
+            <title>Observatoire</title>
 
             <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"><link rel="stylesheet" href="/css/login.css">
 
