--- a/css/home.css
+++ b/css/home.css
@@ -588,6 +588,23 @@
     font-family: Roboto, sans-serif;
     width: 16.666%;
   }
+  button[id="Update Operation"] {
+    box-sizing: border-box;
+    display: flex;
+    border: none;
+    background-color: #fff;
+    width: 36px;
+    height: 36px;
+    margin-right: 4px;
+    cursor: pointer;
+  }
+  img[id="point de suspension"] {
+    box-sizing: border-box;
+    display: flex;
+    width: 20px;
+    height: 20px;
+    margin-top: 7px;
+  }
   .myButton {
     position: relative;
     background-color:#45bab8;
@@ -616,4 +633,75 @@
     width: 24px;
     margin-top: 12px;
     margin-left: 12px;
+  }
+  div[id="box update operation"] {
+    display: flex;
+    position: absolute;
+    flex-direction: column;
+    background-color: #fff;
+    top: 500px;
+    left: 700px;
+    width: 200px;
+    height: 135px;
+    box-shadow:        0 5px 5px -3px rgb(0 0 0 / 20%),        0 8px 10px 1px rgb(0 0 0 / 14%),        0 3px 14px 2px rgb(0 0 0 / 12%);
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+    cursor: pointer;
+}
+  div[id="box renommer"] {
+    box-sizing: border-box;
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    width: 100%;
+    height: 33.333%;
+  }
+  img[id="crayon"] {
+    box-sizing: border-box;
+    display: flex;
+    width: 24px;
+    height: 24px;
+    margin-top: 10px;
+    margin-left: 10px;
+  }
+  div[id="box dupliquer"] {
+    box-sizing: border-box;
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    width: 100%;
+    height: 33.333%;
+  }
+  img[id="dupliquer"] {
+    box-sizing: border-box;
+    display: flex;
+    width: 24px;
+    height: 24px;
+    margin-top: 10px;
+    margin-left: 10px;
+  }
+  div[id="box supprimer"] {
+    box-sizing: border-box;
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    width: 100%;
+    height: 33.333%;
+  }
+  img[id="poubelle"] {
+    box-sizing: border-box;
+    display: flex;
+    width: 24px;
+    height: 24px;
+    margin-top: 10px;
+    margin-left: 10px;
+  }
+  div[id="box text update"] {
+    box-sizing: border-box;
+    display: flex;
+    margin-top: 12px;
+    margin-left: 50px;
   }
