--- a/views/login.html
+++ b/views/login.html
@@ -38,7 +38,7 @@
 
                             </label>
 
-                            <input id="login__username" type="text" name="username" class="form__input" placeholder="Identifiant" required>
+                            <input id="login__username" type="text" name="username" class="form__input" placeholder="Identifiant" required/>
 
                         </div>
 
@@ -56,7 +56,7 @@
 
                             </label>
 
-                            <input id="login__password" type="password" name="password" class="form__input" placeholder="Mot De Passe" required>
+                            <input id="login__password" type="password" name="password" class="form__input" placeholder="Mot De Passe" required/>
 
                         </div>
 
