--- a/css/operation.css
+++ b/css/operation.css
@@ -247,6 +247,7 @@ html {
   main[id="main box"] {
     box-sizing: border-box;
     display: flex;
+    flex-direction: column;
     flex-basis: auto;
     flex-grow: 1;
     flex-shrink: 0;
@@ -270,25 +271,19 @@ header[id="header of the main box"] {
     justify-content: space-between;
     box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.12);
 }
-div[id="title header of the main box"] {
-    box-sizing: border-box;
-    display: flex;
-    position: relative;
-    width: 20%;
-    height: 35%;
-    margin-left: 60px;
-    align-items: center;
-}
 input[id="text title header of the main box"] {
     box-sizing: border-box;
     display: flex;
-    position: relative;
-    margin-left: 20%;
+    position: absolute;
     font-size: large;
     border: none;
+    top: 20px;
+    margin-left: 30px;
     text-decoration: none;
     outline: none;
     background-color: #fff;
+    color: black;
+    width: 780px;
 }
 button[id="button of the title"] {
   box-sizing: border-box;
@@ -300,6 +295,10 @@ button[id="button of the title"] {
   border: none;
   background-color: #fff;
   cursor: pointer;
+  transition-delay: 0s;
+  transition-duration: 0.2s;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 img[id="crayon of the title"] {
   box-sizing: border-box;
@@ -307,4 +306,142 @@ img[id="crayon of the title"] {
   width: 24px;
   height: 24px;
   margin-right: 10px;
+}
+.svg-wrapper {
+  box-sizing: border-box;
+  position: relative;
+  margin-top: 60px;
+  transform: translateY(-50%);
+  margin-left: 30px;
+  width: 100%;
+}
+.shape {
+  stroke-dasharray: 740 1240;
+  stroke-dashoffset: 1050;
+  stroke-width: 6px;
+  fill: transparent;
+  stroke: #22334d;
+  border-bottom: 4px solid #22334d;
+  transition: stroke-width 2s, stroke-dashoffset 2s, stroke-dasharray 2s;
+  -webkit-transition: stroke-width 2s, stroke-dashoffset 2s, stroke-dasharray 2s;
+  -moz-transition: stroke-width 2s, stroke-dashoffset 2s, stroke-dasharray 2s;
+  -ms-transition: stroke-width 2s, stroke-dashoffset 2s, stroke-dasharray 2s;
+  -o-transition: stroke-width 2s, stroke-dashoffset 2s, stroke-dasharray 2s;
+}
+.text {
+  font-family: 'Roboto Condensed';
+  font-size: 22px;
+  line-height: 32px;
+  letter-spacing: 8px;
+  color: #fff;
+  top: -48px;
+  position: relative;
+}
+div[id="container main information"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  height: 100%;
+  width: 100%;
+  flex-direction: row;
+}
+div[id="container nav operation"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  height: 100%;
+  width: 370px;
+  padding-left: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.12);
+}
+nav[id="nav operation"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+div[id="list element of the operation"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+div[id="main information of the list of the operation"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  height: 35px;
+  cursor: pointer;
+}
+img[class="triangle_bas"] {
+  box-sizing: border-box;
+  display: flex;
+  width: 32px;
+  height: 32px;
+}
+img[id="operation"] {
+  box-sizing: border-box;
+  display: flex;
+  margin-left: 5px;
+  width: 26px;
+  height: 26px;
+  border: none;
+}
+span[id="text element of list"] {
+  margin-left: 9px;
+  font-size: large;
+}
+div[id="list of the lot of the operation"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  margin-top: 4px;
+  margin-left: 20px;
+  flex-direction: column;
+  height: 90%;
+  width: 94.5%;
+}
+div[class="container of the lot"] {
+  box-sizing: border-box;
+  display: none;
+  position: relative;
+  margin-top: 5px;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  height: 35px;
+}
+div[id="extented the nav"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: 5%;
+}
+button[id="button extented the nav"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  height: 100%;
+  width: 50px;
+  margin-left: 300px;
+  border: none;
+  background-color: #fff;
+  cursor: pointer;
+}
+img[id="right_arrow"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  height: 100%;
+  width: 100%;
 }
