--- a/views/home.html
+++ b/views/home.html
@@ -272,7 +272,7 @@
 
       </div>
       <script src="/index.js" async></script>
-      <script src="/js/script.js" async></script>
+      <script src="/js/script_home.js" async></script>
 
     </body>
 
